Fixing misalignment of cards in print preview

--- a/src/components/TemplateRenderer/TemplateRenderer.scss
+++ b/src/components/TemplateRenderer/TemplateRenderer.scss
@@ -4,3 +4,7 @@
 
   print-color-adjust: exact;
 }
+.card * {
+  display: inline-block;
+  break-inside: avoid;
+}
